# eta

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  OBJECTIVE.md  README.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch.watchlist.jsonl.bak  dune  dune-project  effet-otel.opam  effet-schema.opam  effet-stream.opam  effet.opam  eta-ai-anthropic.opam  eta-ai-openai-codec.opam  eta-ai-openai-compat.opam  eta-ai-openai.opam  eta-ai-openrouter.opam  eta-ai.opam  eta-http.opam  eta-otel.opam  eta-redacted.opam  eta-schema-test.opam  eta-schema.opam  eta-sql.opam  eta-stream.opam  eta-test.opam  eta.opam  eta_ai.opam  eta_ai_anthropic.opam  eta_ai_kimi_coding.opam  eta_ai_moonshot.opam  eta_ai_openai.opam  eta_ai_openai_codec.opam  eta_ai_openai_codex.opam  (+62 more)
.scratch/otel_propagation/: README.md  dune  neg_malformed_traceparent.ml  p_b_core_context.ml  p_c_exporter_only.ml  runtime_smoke.ml  services.ml
.scratch/ppx_survival/: README.md  dune  explicit_idiom_fixture.ml  golden_cases.ml
.scratch/r_dx_research/: args_m02.ml  args_m06.ml  args_m07.ml  args_m12.ml  args_m14.ml  args_m15.ml  args_m16.ml  args_m17.ml  args_m20.ml  args_top.ml  bag_m01.ml  bag_m05.ml  bag_m06.ml  bag_m07.ml  bag_m09.ml  bag_m10.ml  bag_m12.ml  bag_m13.ml  bag_m14.ml  bag_m16.ml  bag_m18.ml  bag_m19.ml  bag_m20.ml  dune  dx_common.ml  env_m03.ml  env_m07.ml  env_m08.ml  env_m10.ml  env_m11.ml  env_m12.ml  env_m13.ml  env_m16.ml  env_m17.ml  env_m19.ml  neg_args_missing_cap.ml  neg_env_missing_cap.ml  runtime_smoke.ml
.scratch/stream_research/: STUB_stream.mli  benchmark_compare.ml  dune  neg_a_resource_leak.ml  neg_c_stage_unscoped.ml  s_b2_pull_core.ml  s_d_eio_chunked.ml  services.ml
bench/: README.md  compare.ml  dune  overhead.ml  run.sh
bench/compile/: run_compile.sh
bench/http/: bench_http.ml  dune
bench/http_server_loop/: bench_server_loop.ml  dune
bench/lib/: bench_lib.ml  dune
bench/r_t0_branch_elision/: dune
bench/r_t0_linkage/: dune  no_otel_eta_only.ml  with_otel_linked.ml
bench/r_t3_exporter_on_eta_http/: dune  r_t3_eta_http_otlp.ml
bench/results/: 20260520T204629Z-b0590d2.json  20260520T204752Z-855d7c4.json  20260520T224451Z-81b3fee.json  20260526T142112Z-841d863.json  20260601T090931Z-1925b9ddf.json  20260605T200225Z-8ffd36998.json  20260612T092938Z-a2e9ee6d9.json  20260612T134135Z-908cb72cd.json  20260612T155424Z-19b7f648e.json  20260615T213905Z-1214cb407.json  eta-otel-encoder-repeat-current.json
bench/router/: compare.sh  generate_data.py  paths.txt  routes.txt
bench/runtime_concurrency/: dune  runtime_concurrency.ml
bench/runtime_core/: dune  runtime_core.ml
bench/runtime_observability/: dune  runtime_observability.ml
bench/runtime_overhead/: dune  runtime_overhead.ml
bench/runtime_overhead_ts/: README.md  package.json  run.sh  runtime_overhead.ts
bench/runtime_overhead_zio/: README.md  RuntimeOverheadZio.scala  run.sh
bench/runtime_par/: README.md  bench_tree_sum.ml  compare_chili_rayon.sh  dune  kernel_irregular.ml  kernel_map.ml  kernel_matmul.ml  kernel_micro_join.ml  kernel_pathological.ml  kernel_qsort.ml  runtime_par.ml
bench/runtime_real/: dune  runtime_real.ml
bench/runtime_schema/: dune  runtime_schema.ml
bench/runtime_stream/: dune  runtime_stream.ml
bench/runtime_watchlist/: dune  runtime_watchlist.ml
bench/tls_openssl/: dune  tls_openssl.ml
examples/: README.md  admission_control.ml  all_health_checks.ml  background_lifecycle.ml  batch_concurrency.ml  blocking_result.ml  blueprint_names.ml  bounded_channel.ml  cached_resource.ml  catch_recovery.ml  channel_probe.ml  cli_business.ml  connection_pool.ml  daemon_drain.ml  deterministic_random.ml  dune  duration_budget.ml  error_rendering.ml  exit_cause_boundary.ml  finally_cleanup.ml  fold_recovery.ml  http_handlers.ml  log_level_policy.ml  manual_resource_refresh.ml  map_projection.ml  metric_batching.ml  mutable_ref_state.ml  observability.ml  observability_controls.ml  observability_sinks.ml  pubsub_poll.ml  pubsub_subscription.ml  queue_probe.ml  quickstart.ml  race_mirror.ml  repeat_heartbeat.ml  resource_retry.ml  retry_schedule.ml  runtime_boundary.ml  scoped_resource.ml  (+17 more)
http-testsuite/: README.md  dune  expected_divergences.md  run.sh
http-testsuite/lib/: adversarial.ml  bench.ml  caddy.ml  certs.ml  curl.ml  dune  eta_server.ml  fixtures.ml  interop.ml  json.ml  malicious_h2.ml  nginx.ml  sha256.ml  summary.ml  types.ml  util.ml
lib/duckdb/: appender.ml  bulk.ml  bulk_row.ml  connection.ml  database.ml  dsl_backend.ml  duckdb_stubs.c  dune  eta_duckdb.ml  eta_duckdb.mli  pool.ml  row.ml  types.ml  types.mli  value.ml
lib/eta/: blocking_runtime.ml  capabilities.ml  capabilities.mli  cause.ml  cause.mli  channel.ml  channel.mli  dune  duration.ml  duration.mli  effect.ml  effect.mli  effect_blocking.ml  effect_concurrent.ml  effect_core.ml  effect_erasure.ml  effect_island.ml  effect_observability.ml  effect_resource.ml  effect_schedule.ml  effect_supervisor_scope.ml  exit.ml  exit.mli  host_eio.ml  host_eio.mli  island.ml  island.mli  island_runtime.ml  log_level.ml  log_level.mli  logger.ml  logger.mli  meter.ml  meter.mli  mutable_ref.ml  mutable_ref.mli  par.ml  par.mli  par_array.ml  par_iter.ml  (+45 more)
lib/http/: README.md  dune  eta_http.ml  eta_http.mli  security.ml  security.mli  server.ml  server.mli  server_body.ml  server_body.mli  server_config.ml  server_config.mli  server_error.ml  server_error.mli  server_handler.ml  server_handler.mli  server_meter.ml  server_meter.mli  server_request.ml  server_request.mli  server_request_validation.ml  server_request_validation.mli  server_response.ml  server_response.mli  server_semconv.ml  server_semconv.mli  server_tracer.ml  server_tracer.mli  trace_context.ml  trace_context.mli
lib/http_eio/: admission.ml  alpn.ml  alpn_server.ml  alpn_server.mli  client.ml  client.mli  codec.ml  config.ml  dispatch.ml  dune  error.ml  eta_http_eio.ml  eta_http_eio.mli  frame.ml  h1_server_connection.ml  h1_server_connection.mli  h2_server_connection.ml  header.ml  (+22 more)
(+3946 files in other folders)
