(dirs :standard \ .scratch)

(env
 (release
  (ocamlopt_flags -O3 -unbox-closures -unbox-closures-factor 20 -rounds 2))
 (asan
  (c_flags
   (:standard
    -O1
    -g
    -fno-omit-frame-pointer
    -fsanitize=address,undefined
    -fno-sanitize-recover=all))
  (link_flags
   (:standard -cclib -fsanitize=address,undefined))))

(rule
 (alias interop)
 (deps (alias http-testsuite/interop))
 (action (progn)))

(rule
 (alias cve-regress)
 (deps (alias http-testsuite/cve-regress))
 (action (progn)))

(rule
 (alias http-bench)
 (deps (alias http-testsuite/http-bench))
 (action (progn)))

(rule
 (alias server-load)
 (deps (alias http-testsuite/server-load))
 (action (progn)))

(rule
 (alias fuzz-smoke)
 (deps (alias test/http_fuzz/fuzz-smoke))
 (action (progn)))

(rule
 (alias fuzz)
 (deps (alias test/http_fuzz/fuzz))
 (action (progn)))

(rule
 (alias eta-js-runtest)
 (deps (alias test/js_jsoo/runtest) (alias test/js_stream/runtest))
 (action (progn)))
