(dirs :standard \ .scratch)

(env
 (release
  (ocamlopt_flags -O3 -unbox-closures -unbox-closures-factor 20 -rounds 2))
 (asan
  (c_flags
   (:standard
    -O1
    -g
    -fno-omit-frame-pointer
    -fsanitize=address,undefined
    -fno-sanitize-recover=all))
  (link_flags
   (:standard -cclib -fsanitize=address,undefined))))

(alias
 (name interop)
 (deps (alias http-testsuite/interop)))

(alias
 (name cve-regress)
 (deps (alias http-testsuite/cve-regress)))

(alias
 (name http-bench)
 (deps (alias http-testsuite/http-bench)))

(alias
 (name eta-lifecycle)
 (deps (alias http-testsuite/eta-lifecycle)))

(alias
 (name h2spec)
 (deps (alias http-testsuite/h2spec)))

(alias
 (name perf-compare)
 (deps (alias http-testsuite/perf-compare)))

(alias
 (name server-load)
 (deps (alias http-testsuite/server-load)))

(alias
 (name red-probes)
 (deps (alias http-testsuite/red-probes)))

(alias
 (name fuzz-smoke)
 (deps (alias test/http_fuzz/fuzz-smoke)))

(alias
 (name fuzz)
 (deps (alias test/http_fuzz/fuzz)))

(alias
 (name eta-js-runtest)
 (deps (alias test/js_jsoo/runtest) (alias test/js_stream/runtest)))
