opam-version: "2.0"
synopsis: "Typed functional effects for OCaml, backed by Eio"
description: """
Effet ports the core ideas of TypeScript Effect and Scala ZIO to idiomatic
OCaml: an environment channel, a typed failure channel, a success channel,
resource scopes, schedules, retry, race, timeout, and detached fibers.
"""
maintainer: ["ribelo"]
authors: ["ribelo"]
license: "MIT"
homepage: "https://github.com/ribelo/effet"
bug-reports: "https://github.com/ribelo/effet/issues"
depends: [
  "ocaml" {>= "5.1"}
  "dune" {>= "3.0"}
  "eio" {>= "1.0"}
  "eio_main" {>= "1.0"}
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
