(alias
 (name bench)
 (deps
  (alias ../packages/eta/bench/bench)
  (alias ../packages/stream/bench/bench)
  (alias ../packages/schema/bench/bench)
  (alias ../packages/otel/bench/bench)
  (alias ../packages/par/bench/bench)
  (alias ../packages/http/bench/bench)
  (alias ../packages/sql/bench/bench)
  (alias ../packages/ai/bench/bench)
  (alias ../packages/ai_openai_codec/bench/bench)
  (alias ../packages/ai_openai/bench/bench)
  (alias ../packages/ai_anthropic/bench/bench)
  (alias ../packages/ai_openai_compat/bench/bench)
  (alias ../packages/ai_openrouter/bench/bench)
  (alias ../packages/redacted/bench/bench)
  (alias ../packages/test/bench/bench)
  (alias ../packages/schema_test/bench/bench)
  (alias ../packages/ppx/bench/bench)))

(executable
 (name compare)
 (libraries yojson unix str))

(executable
 (name overhead)
 (libraries yojson unix))
