(alias
 (name bench)
 (deps
  (alias ../lib/eta/bench/bench)
  (alias ../lib/stream/bench/bench)
  (alias ../lib/schema/bench/bench)
  (alias ../bench/router/ocaml/bench)
  (alias ../lib/otel/bench/bench)
  (alias ../lib/par/bench/bench)
  (alias ../lib/http_bench/bench)
  (alias ../lib/sql/bench/bench)
  (alias ../lib/ai/bench/bench)
  (alias ../lib/ai/openai_codec/bench/bench)
  (alias ../lib/ai/openai/bench/bench)
  (alias ../lib/ai/anthropic/bench/bench)
  (alias ../lib/ai/openai_compat/bench/bench)
  (alias ../lib/ai/openrouter/bench/bench)
  (alias ../lib/redacted/bench/bench)
  (alias ../lib/test/bench/bench)
  (alias ../lib/schema_test/bench/bench)
  (alias ../lib/ppx/bench/bench)))

(executable
 (name compare)
 (libraries yojson unix str))

(executable
 (name overhead)
 (libraries yojson unix))
